--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,10 +1,22 @@
 body
   display: grid
-  color: black
-  background-color: green
+  color: #9395ff
+  font-family: 'CyrillicGoth'
+  text-align: center
+  font-size: 50px
+  line-height: 15
   transition: 0.5s
+  background: rgb(238,174,202)
+  animation: animate 5s linear infinite
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%)
+
 .sync
   display: flex
   color: red
   padding: .2rem
   margin-top: 2rem
+@keyframes animate
+  0%
+    filter: hue-rotate(0deg)
+  100%
+    filter: hue-rotate(360deg)
